--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </header>
 
         <div class="image-video">
-            <video class="video" autoplay loop muted>
+            <video class="video" autoplay loop muted playsinline>
                 <source src="video-sky.mp4" type="video/mp4">
             </video>
             <div class="video_text">
