--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="video_text">
                 <p>Take the hassle out of languages in your <span class="video_animation">life.</span></p>
                 <div class="video_btn">
-                    <a href="#" class="btn_video">Explore more</a>
-                    <a href="#" class="btn_video">Log in</a>
+                    <a href="#" class="btn_video btn_video1">Explore more</a>
+                    <a href="#" class="btn_video btn_video2">Log in</a>
                 </div>
             </div>
             <button id="play_button">
@@ -365,9 +365,6 @@
                 </footer>
             </div>
         </div>
-        </main>
-        </div>
-        <div class="space"></div>
 
             <!--=============== SCROLL UP ===============-->
             <a href="#" class="scrollup" id="scroll-up">
