--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Halloween
                 </a>
 
-                <div class="nav__menu" id="nav-menu">
+                <!-- <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a href="#home" class="nav__link active-link">Home</a>
@@ -58,7 +58,7 @@
                     </div>
 
                     <img src="assets/img/nav-img.png" alt="" class="nav__img">
-                </div>
+                </div> -->
 
                 <div class="nav__toggle" id="nav-toggle">
                     <i class='bx bx-grid-alt'></i>
