--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="nav__toggle" id="nav-toggle">
                     <i class='bx bx-grid-alt'></i>
                 </div>
-                <div class="nav__login" style="margin-left: 150px;">
+                <div class="nav__login">
                     <i class="fa-solid fa-arrow-right-to-bracket fa-lg" style="color: #ffffff;"></i>
                 </div>
             </nav>
@@ -393,7 +393,7 @@
                         </div>
                     </div>
     
-                    <span class="footer__copy">&#169; Infinity. All rigths reserved</span>
+                    <span class="footer__copy">&#169; Infinity. All rights reserved</span>
     
                     <img src="assets/img/footer1-img.png" alt="" class="footer__img-one">
                     <img src="assets/img/footer2-img.png" alt="" class="footer__img-two">
