--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="infinity (1).png" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/img/infinity.png" type="image/x-icon">
 
         <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -16,19 +16,23 @@
         <!--=============== CSS ===============--> 
         <link rel="stylesheet" href="assets/css/styles.css">
 
+        <!-- ===================== CAROUSEL ================= -->
         <link rel="stylesheet" href="assets/css/logos.css">
 
+        <!-- ================ CHANGE BACKGROUND COLOR ============= -->
         <link rel="stylesheet" href="assets/css/changeColor.css">
+
+        <!-- =================== REMIXICON ================== -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css">
 
-        <title>Responsive Halloween Website</title>
+        <title>Infinity translate</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
                 <a href="#" class="nav__logo">
-                    <img src="infinity (1).png" class="nav__logo-img"> 
+                    <img src="assets/img/infinity.png" class="nav__logo-img"> 
                     infinity
                 </a>
 
@@ -50,7 +54,7 @@
                             <a href="#new" class="nav__link">Docs</a>
                         </li>
                         
-                        <a href="#" class="nav__link">Support</a>
+                        <a href="#support" class="nav__link">Support</a>
                     </ul>
 
                     <div class="nav__close" id="nav-close">
@@ -60,18 +64,18 @@
                     <img src="assets/img/nav-img.png" alt="" class="nav__img">
                 </div>
 
-                <div class="nav__toggle" id="nav-toggle">
+                <div class="nav__toggle" style="cursor: pointer;" id="nav-toggle">
                     <i class='bx bx-grid-alt'></i>
                 </div>
                 <div class="nav__login">
-                    <i class="fa-solid fa-arrow-right-to-bracket fa-lg" style="color: #ffffff;"></i>
+                    <a><i class="fa-solid fa-arrow-right-to-bracket fa-lg" style="color: #ffffff;"></i></a>
                 </div>
             </nav>
         </header>
 
         <div class="image-video">
             <video class="video" autoplay loop muted playsinline>
-                <source src="video-sky.mp4" type="video/mp4">
+                <source src="assets/stuff/video-sky.mp4" type="video/mp4">
             </video>
             <div class="video_text">
                 <p>Take the hassle out of languages in your <span class="video_animation">life.</span></p>
@@ -97,7 +101,7 @@
                         <a class="btn-design">Explore translate</a>
                     </div>
                     <div class="item item3">
-                        <img src="yellow.gif" alt="" class="item3-img" style="display: inline-block;">
+                        <img src="assets/img/yellow.gif" alt="" class="item3-img" style="display: inline-block;">
                     </div>
                 </div>
             </div>
@@ -112,7 +116,7 @@
                         <a class="btn-design">Explore favorite word</a>
                     </div>
                     <div class="box2-item box2-item3">
-                        <img src="purple.gif" alt="" class="box2-item3_img" style="display: inline-block">
+                        <img src="assets/img/purple.gif" alt="" class="box2-item3_img" style="display: inline-block">
                     </div>
                 </div>
             </div>
@@ -127,7 +131,7 @@
                         <a class="btn-design">Explore flashcard</a>
                     </div>
                     <div class="box3-item box3-item3">
-                        <img src="red.gif" alt="" class="box3-item3_img" style="display: inline-block">
+                        <img src="assets/img/red.gif" alt="" class="box3-item3_img" style="display: inline-block">
                     </div>
                 </div>
             </div>
@@ -142,7 +146,7 @@
                         <a class="btn-design">Explore more</a>
                     </div>
                     <div class="box4-item box4-item3">
-                        <img src="green.gif" alt="" class="box4-item3_img" style="display: inline-block">
+                        <img src="assets/img/green.gif" alt="" class="box4-item3_img" style="display: inline-block">
                     </div>
                 </div>
             </div>
@@ -170,63 +174,63 @@
                         <div class="swiper-wrapper">
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
                             </div>
                             <div class="component swiper-slide">
                                 <div class="pic">
-                                    <img src="aNam.jpg" class="picNam" alt="">
+                                    <img src="assets/img/aNam.jpg" class="picNam" alt="">
                                 </div>
                                 <p class="box6-item2_content">"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique sit odit fugiat fuga molestias repellat provident sunt hic."</p>
                                 <p class="box6-item2_content2">Nguyen dep trai, nam cuoi y hoc</p>
@@ -325,7 +329,7 @@
                     <div class="footer__container container grid">
                         <div class="footer__content">
                             <a href="#" class="footer__logo">
-                                <img src="infinity (1).png" alt="" class="footer__logo-img">
+                                <img src="assets/img/infinity.png" alt="" class="footer__logo-img">
                                 infinity
                             </a>
     
@@ -409,7 +413,7 @@
         <!-- ==================== JQUERY ======================= -->
         <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 
-        <!-- ========================= changeColor ========================= -->
+        <!-- =================== changeColor ================ -->
         <script src="assets/js/changeColor.js"></script>
         <!--=============== SCROLL REVEAL ===============-->
         <script src="assets/js/scrollreveal.min.js"></script>
