--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav class="nav container">
                 <a href="#" class="nav__logo">
                     <img src="assets/img/infinity.png" class="nav__logo-img"> 
-                    infinity
+                    <span class="logo-header_text">infinity</span>
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -65,10 +65,10 @@
                 </div>
 
                 <div class="nav__toggle" style="cursor: pointer;" id="nav-toggle">
-                    <i class='bx bx-grid-alt'></i>
+                    <i class="fa-solid fa-bars" style="color: #3C87C9;"></i>
                 </div>
                 <div class="nav__login">
-                    <a><i class="fa-solid fa-arrow-right-to-bracket fa-lg" style="color: #ffffff;"></i></a>
+                    <a><i class="fa-solid fa-arrow-right-to-bracket fa-lg" style="color: #3C87C9;"></i></a>
                 </div>
             </nav>
         </header>
