--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 </div>
 
                 <div class="nav__toggle" style="cursor: pointer;" id="nav-toggle">
-                    <i class="fa-solid fa-bars" style="color: #3C87C9;"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </div>
                 <div class="nav__login">
-                    <a><i class="fa-solid fa-arrow-right-to-bracket fa-lg" style="color: #3C87C9;"></i></a>
+                    <a><i class="fa-solid fa-arrow-right-to-bracket fa-lg"></i></a>
                 </div>
             </nav>
         </header>
@@ -78,7 +78,7 @@
                 <source src="assets/stuff/video-sky.mp4" type="video/mp4">
             </video>
             <div class="video_text">
-                <p>Take the hassle out of languages in your <span class="video_animation">life.</span></p>
+                <p class="hoverText">Take the hassle out of languages in your <span class="video_animation">life.</span></p>
                 <div class="video_btn">
                     <a href="#" class="btn_video btn_video1">Explore more</a>
                     <a href="#" class="btn_video btn_video2">Log in</a>
@@ -169,7 +169,6 @@
                         <h1 class="box6-item1_title">Community</h1>
                     </div>
                     <img src="https://cpwebassets.codepen.io/assets/packs/lines-3-4541e35a1939230404d773f7eeddcc9b.svg" class="decor2"  alt="">
-    
                     <div class="box6-item2 swiper mySwiper">
                         <div class="swiper-wrapper">
                             <div class="component swiper-slide">
